springboot-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: springboot-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    
spec:
  rules:
    - http:
        paths:
        - path: /course-svc/getAllDevopsTools
          pathType: Prefix
          backend:
            service:
              name: springboot-service
              port:
                number: 8080
